# PG-MAP

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  benchmark_cfg.py  benchmark_ug.py  pgmap_config.py  pgmap_core.py  pgmap_eval.py  pgmap_flow_core.py  pgmap_flow_sd3.py  pgmap_flow_variants.py  pgmap_patch_schedule.py  pgmap_reward.py  pgmap_sd15.py  pgmap_sd15_variants.py  pgmap_sdxl.py  pgmap_sdxl_variants.py  pgmap_variants.py  pyproject.toml  requirements.txt  run_fm_variants_experiment.py  run_mapcz_newton_experiment.py  run_sd15_newB_experiment.py  validate_criteria.py
comfyui/: README.md  __init__.py  nodes.py
comfyui/workflows/: pgmap_sdxl_basic.json
configs/: README.md
configs/sd15/: baseline.yaml  mapc.yaml  mapcz.yaml  pgmap.yaml  reward_z.yaml  tuned_cfg_pgmap.yaml
configs/sd3/: baseline.yaml  flowchef_alwayson.yaml  flowchef_dataside.yaml  ug_fm.yaml
configs/sdxl/: baseline.yaml  mapc.yaml  mapcz.yaml  pgmap.yaml  reward_z.yaml  tuned_cfg_pgmap.yaml
data/: README.md
docs/: BENCHMARKS_SUBMISSION.md  HUMAN_EVAL.md  HYPERPARAMETERS.md  MODEL_ZOO.md  REPRODUCE.md
docs/site/: README.md  index.html  style.css
eval/: aggregate_table2.py  compute_blip_vqa_alignment.py  compute_blip_vqa_alignment_fm.py  compute_cfg_winrate.py  compute_crr_deployable.py  compute_crr_fm.py  compute_crr_multiseed.py  compute_partiprompts_categories.py  compute_ug_winrate.py
eval/t2i_compbench/: aggregate.py  generate.py  run_blip_vqa.sh  setup_t2i_compbench.sh
flowchef_baseline/: README.md  aggregate_results.py  audit_eta0.py  flowchef_core.py  flowchef_eval.py  flowchef_sd3.py
notebooks/: colab_pgmap_quickstart.ipynb  reproduce_paper_figures.ipynb
pgmap/: __init__.py
pgmap/pipelines/: __init__.py  sd15.py  sd3.py  sdxl.py
scripts/: _common.sh  download_hps.sh  reproduce_all.sh  reproduce_table1_sd15.sh  reproduce_table1_sdxl.sh  reproduce_table2_fm.sh  reproduce_table4_crr.sh  setup_env.sh
scripts/slurm/: fm_table2.sbatch  sd15_table1.sbatch  sdxl_table1.sbatch
tests/: test_imports.py
tests/smoke/: README.md  _check_smoke.py  smoke_fm.sh  smoke_pipeline.py  smoke_sd15.sh  smoke_sdxl.sh
utils/: aes_utils.py  clip_utils.py  hps_utils.py
